--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,22 +1,17 @@
-﻿<Window x:Class="TerminKalender.MainWindow"
+﻿<Window x:Class="TerminKalender.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:fa="http://schemas.fontawesome.io/icons/"
         Title="TerminKalender" Height="600" Width="800" Background="Transparent" 
-        WindowStyle="None" AllowsTransparency="True">
-    <!-- Gesamtes Layout in eine Border mit abgerundeten Ecken einbetten -->
+        WindowStyle="None" AllowsTransparency="True"
+        WindowStartupLocation="CenterScreen">
     <Border CornerRadius="20" Background="White" BorderBrush="#E0E0E0" BorderThickness="1"  MouseDown="Window_MouseDown">
         <Grid Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
-                <!-- Linke Seite erhält 66% des Platzes -->
                 <ColumnDefinition Width="1*" />
-                <!-- Rechte Seite erhält 34% des Platzes -->
             </Grid.ColumnDefinitions>
 
-            
-
-            <!-- Linke Seite: Jahres- und Monatsnavigation sowie Kalender -->
             <StackPanel Grid.Column="0" HorizontalAlignment="Left">
                 
                 <!-- Jahr-Auswahl -->
@@ -65,7 +60,7 @@
             </StackPanel>
 
             <!-- Rechte Seite: Eingabefelder und Terminliste -->
-            <Border Grid.Column="1" Background="#FFF5F5" CornerRadius="10" Margin="10">
+            <Border Grid.Column="1" Background="#d78774" CornerRadius="10" Margin="10">
                 <StackPanel Margin="10">
 
                     <!-- Fenstersteuerung (Schließen, Minimieren, Maximieren) -->
@@ -76,22 +71,22 @@
                     <!-- Dynamische Überschrift für Hinzufügen/Bearbeiten -->
                     <TextBlock x:Name="HeaderTextBlock" Text="Neuen Termin hinzufügen" FontSize="16" FontWeight="Bold" Margin="0,0,0,20"/>
 
-                    <!-- Eingabefelder für Titel und Zeitangaben -->
                     <StackPanel Orientation="Vertical" Margin="0,0,0,20">
+                        <!-- Titel -->
                         <TextBlock Text="Titel" Margin="0,0,0,5"/>
                         <TextBox x:Name="TitleTextBox" Width="250" VerticalAlignment="Center" 
-                                 GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" Margin="0,0,0,10"/>
-                        <StackPanel Orientation="Horizontal">
-                            <StackPanel Orientation="Vertical" Margin="0,0,10,0">
-                                <TextBlock Text="Startzeit" Margin="0,0,0,5"/>
-                                <TextBox x:Name="StartTimeTextBox" Width="100" VerticalAlignment="Center" 
-                                         GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
-                            </StackPanel>
-                            <StackPanel Orientation="Vertical">
-                                <TextBlock Text="Endzeit" Margin="0,0,0,5"/>
-                                <TextBox x:Name="EndTimeTextBox" Width="100" VerticalAlignment="Center" 
-                                         GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus"/>
-                            </StackPanel>
+                            GotFocus="TextBox_GotFocus" LostFocus="TextBox_LostFocus" Margin="0,0,0,10"/>
+
+                        <!-- Startzeit -->
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                            <TextBlock Text="Startzeit" Margin="0,0,10,0"/>
+                            <ComboBox x:Name="StartTimeComboBox" Width="100" Margin="0,0,10,0" />
+                        </StackPanel>
+
+                        <!-- Endzeit -->
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+                            <TextBlock Text="Endzeit" Margin="0,0,10,0"/>
+                            <ComboBox x:Name="EndTimeComboBox" Width="100" />
                         </StackPanel>
                     </StackPanel>
 
@@ -103,24 +98,26 @@
 
                     <!-- Terminliste für das ausgewählte Datum -->
                     <TextBlock Text="Termine für den ausgewählten Tag" FontSize="16" FontWeight="Bold" Margin="10,0,0,10"/>
-                    <ListBox x:Name="AppointmentsListBox" SelectionMode="Single" Margin="10,0,0,10">
-                        <ListBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Margin="5">
-                                    <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14"/>
-                                    <TextBlock Text="{Binding TimeRange}" FontSize="12" Foreground="Gray"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ListBox.ItemTemplate>
+                    <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,0,0,10" MaxHeight="250">
+                        <ListBox x:Name="AppointmentsListBox" SelectionMode="Single">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel Margin="5">
+                                        <TextBlock Text="{Binding Title}" FontWeight="Bold" FontSize="14"/>
+                                        <TextBlock Text="{Binding TimeRange}" FontSize="12" Foreground="Gray"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
 
-                        <!-- Kontextmenü zum Löschen und Bearbeiten eines Termins per Rechtsklick -->
-                        <ListBox.ContextMenu>
-                            <ContextMenu>
-                                <MenuItem Header="Termin bearbeiten" Click="EditAppointmentContextMenu_Click" />
-                                <MenuItem Header="Termin löschen" Click="DeleteAppointmentContextMenu_Click" />
-                            </ContextMenu>
-                        </ListBox.ContextMenu>
-                    </ListBox>
+                            <!-- Kontextmenü für Termine -->
+                            <ListBox.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem Header="Termin bearbeiten" Click="EditAppointmentContextMenu_Click" />
+                                    <MenuItem Header="Termin löschen" Click="DeleteAppointmentContextMenu_Click" />
+                                </ContextMenu>
+                            </ListBox.ContextMenu>
+                        </ListBox>
+                    </ScrollViewer>
                 </StackPanel>
             </Border>
         </Grid>
